Fixed Chat Container Overflow

--- a/src/Chatbot.css
+++ b/src/Chatbot.css
@@ -18,7 +18,7 @@
   .chatbot-messages { 
     height: 500px;
     color: #f5eded;
-    
+    overflow-y: scroll;
     padding: 8px;
   }
   .message {
@@ -86,5 +86,4 @@
     margin-right: auto;
     text-align: left;
   }
-
 
